--- a/ReVou/Kalkulator BMI/Halaman Awal.html
+++ b/ReVou/Kalkulator BMI/Halaman Awal.html
@@ -27,19 +27,19 @@
                 <label for="bb">
                 <strong>Berat Badan</strong> (kg)
             </label><br>
-            <input type="text" id="bb" required><br><br>
+            <input type="text" id="bb" required autocomplete="off"><br><br>
         </div>
         <div id="box3">
             <label for="age">
                 <strong>Usia</strong> (tahun)
             </label><br>
-            <input type="text" id="age" required><br><br>
+            <input type="text" id="age" required autocomplete="off"><br><br>
         </div>
         <div id="box4">
             <label for="tb">
                 <strong>Tinggi Badan</strong> (cm)
             </label><br>
-            <input type="text" id="tb" required><br><br>
+            <input type="text" id="tb" required autocomplete="off"><br><br>
         </div>
         <input type="submit" value="Hitung BMI">
         <input type="reset" value="Reset">
