--- a/ReVou/Kalkulator BMI/Halaman Awal.html
+++ b/ReVou/Kalkulator BMI/Halaman Awal.html
@@ -2,14 +2,30 @@
 <head>
     <title>Kalkulator BMI</title>
     <link rel="stylesheet" href="warna.css">
+    <style>
+        /* Center the content using flexbox */
+         body {
+            display: flexbox;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Set the height of the body to fill the viewport */
+        } 
+
+        .container {
+            width: 80%; /* You can adjust the width as needed */
+        }
+        article {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Kalkulator BMI</h1>
-    <div class="a">
+    <h1 style="text-align: center;">Kalkulator BMI</h1>
+    <div class="a" style="text-align: center; font-size: medium;">
         <p>
             Berat badan ideal adalah impian semua orang. 
-            Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.
-            Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.
+            <br>Tidak hanya memiliki bentuk tubuh yang menunjang penampilan, berat badan ideal juga menandakan kondisi tubuh yang sehat.
+            <br>Bagaimana denganmu? Yuk, hitung sekarang di kalkulator BMI.
         </p>
     </div>
     <div id="box-utama">
@@ -41,30 +57,28 @@
             </label><br>
             <input type="text" id="tb" required autocomplete="off"><br><br>
         </div>
-        <input type="submit" value="Hitung BMI">
-        <input type="reset" value="Reset">
+        <input type="submit" value="Hitung BMI" class="button">
+        <input type="reset" value="Reset" class="reset">
     </form>
 </div>
 
 
 <article>
     <h2>Keunggulan Fitur</h2>
-    <p>
-        1. Menghitung berat badan <br>
-        2. Menentukan kategori berat badan ideal atau tidak <br>
-        3. Mempersiapkan program penurunan  berat badan <br>
+    <p style="font-size: larger;">
+       <strong> Menghitung dan Menentukan Kategori Berat Badan Ideal </strong>
     </p>
     <br>
-    <div>
+    <div style="font-size: medium;">
         <p>
             <b>Kalkulator ini hanya boleh digunakan oleh orang dewasa </b>(wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI)
-            dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
+            <br>dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter.
         </p>
     </div>
-    <div>
+    <div style="font-size: smaller;">
         <p>
             Kalkulator akan memberi anda gambaran tentang perbandingan berat badan anda dengan nilai umum.
-            Indeks Massa Tubuh (BMI) dihitung sebagai berat badan anda (dalam kilogram) dibagi dengan kuadrat tinggi badan anda (dalam meter)
+            <br>Indeks Massa Tubuh (BMI) dihitung sebagai berat badan anda (dalam kilogram) dibagi dengan kuadrat tinggi badan anda (dalam meter)
             atau BMI = Kg/M<sup>2</sup>.
         </p>
     </div>
